# A2A_Orchestrator

./: .env.example  README.md  main.py  pyproject.toml
agents/host_agents/: agent.py  entry.py  remote_agent_connection.py
agents/langgraph_currency/: __main__.py  agent_executor.py
agents/notion_agent/: __main__.py  agent.py  agent_executor.py
agents/tell_time_agent/: __main__.py  agent.py  agent_executor.py
client/: client.py
server/: server.py
utilities/: agent_registry.json  discovery.py
